Bug 1290506 - Clone RegExp object at the top of RegExpGlobalReplaceOptFunc and RegExpGlobalReplaceOptElemBase to avoid the effect of RegExp#compile. r=till